# SiteBuilder

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md  app.js  build.mac.sh  build.rs  index.html  main.css  main.css.map  package-lock.json  package.json  site-builder.rc  tsconfig.json  webpack.config.js
.sass-cache/4edf9ac230d93d0d231a47ee0d050b4d22e826f6/: main.scssc
assets/: Info.plist  SiteBuilder.icns
css/: main.css
docs/: index.html
docs/about/: index.html
docs/contact/: index.html
docs/portfolio/First-Project/: index.html
docs/portfolio/Second-Project/: index.html
sass/: main.scss
src/: builder.rs  fs.rs  main.rs  messaging.rs  state.rs
src/assets/: app.js  index.html  main.css  main.css.map
src/assets/templates/: about.html  base.html  contact.html  index.html  page.html
src/state/: build.rs  error.rs  fonts.rs  image.rs  meta.rs  mod.rs  project.rs  site_state.rs  template.rs  valid.rs  website.rs
ts/: app.tsx  appState.ts
ts/components/: about.tsx  all.tsx  colorPicker.tsx  inputGroup.tsx  listBox.tsx  page.tsx  project.tsx  selectSite.tsx  templateList.tsx  titleBar.tsx  toast.tsx
ts/services/: communicator.ts  mockState.ts  stringHandler.ts
tutorial/: TUTORIAL.md  tutorial.md
